--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ p a {
 }
 footer {
   width: 100%;
+  height: 100px;
   padding-left: 5px;
   background-color: #f2f2f2;
   line-height: 40px;
@@ -136,4 +137,35 @@ footer {
 }
 #footer-nav a:hover {
   text-decoration: underline;
+}
+@media screen and (max-width: 950px) {
+  .header-right {
+    float: right;
+    top: 0px;
+    margin-right: 2px;
+  }
+  nav ul li {
+    padding: 2px;
+  }
+  #search-input {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .header-right {
+    float: right;
+    top: 0px;
+    margin-right: 2px;
+  }
+  nav ul li {
+    padding: 2px;
+  }
+  #search-input {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 390px) {
+  nav ul li {
+    padding: 1px;
+  }
 }
