--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .header-left {
   float: left;
+  background-color: red;
 }
 ul {
   list-style-type: none;
@@ -110,13 +111,14 @@ p a {
 footer {
   width: 100%;
   height: 100px;
-  padding-left: 5px;
+  /* padding-left: 5px; */
   background-color: #f2f2f2;
   line-height: 40px;
   font-size: 16px;
   position: fixed;
   bottom: 0;
   color: rgb(95, 99, 104);
+  padding-bottom: 20px;
 }
 .footer-left {
   float: left;
