--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav ul li:hover {
 .header-right {
   float: right;
   top: 0px;
-  margin-right: 25px;
+  /* margin-right: 25px; */
 }
 #icon {
   vertical-align: middle;
@@ -119,7 +119,7 @@ footer {
   line-height: 40px;
   font-size: 16px;
   position: fixed;
-  bottom: 0;
+  bottom: 5px;
   color: rgb(95, 99, 104);
   padding-bottom: 20px;
 }
@@ -144,6 +144,9 @@ footer {
   text-decoration: underline;
 }
 @media screen and (max-width: 950px) {
+  body {
+    font-size: 13px;
+  }
   .header-right {
     float: right;
     top: 0px;
@@ -157,6 +160,9 @@ footer {
   }
 }
 @media screen and (max-width: 450px) {
+  body {
+    font-size: 11px;
+  }
   .header-right {
     float: right;
     top: 0px;
@@ -170,6 +176,9 @@ footer {
   }
 }
 @media screen and (max-width: 390px) {
+  body {
+    font-size: 9px;
+  }
   nav ul li {
     padding: 1px;
   }
