--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 .header-left {
   float: left;
+  margin: 0;
 }
 ul {
   list-style-type: none;
@@ -128,7 +129,7 @@ footer {
 }
 .footer-right {
   float: right;
-  margin-right: 25px;
+  /* margin-right: 25px; */
 }
 #footer-nav {
   border-top: 1px solid #e4e4e4;
@@ -164,14 +165,14 @@ footer {
     font-size: 11px;
   }
   #sign-in {
-    width: 40px;
+    width: 50px;
 
     border-radius: 2px;
   }
   .header-right {
     float: right;
     top: 0px;
-    margin-right: 2px;
+    /* margin-right: 2px; */
   }
   nav ul li {
     padding: 2px;
@@ -187,9 +188,7 @@ footer {
   nav ul li {
     padding: 1px;
   }
-  #sign-in {
+  /* #sign-in {
     width: 40px;
-
-    border-radius: 2px;
-  }
+  } */
 }
