--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
   background-color: #f2f2f2;
   line-height: 40px;
   font-size: 16px;
-  position: fixed;
+  position: absolute;
   bottom: 5px;
   color: rgb(95, 99, 104);
   padding-bottom: 20px;
@@ -164,17 +164,15 @@ footer {
   body {
     font-size: 11px;
   }
-  #sign-in {
-    /* width: 50px; */
-
-    border-radius: 2px;
+  .header-left {
+    position: absolute;
+    left: 0px;
   }
   .header-right {
     position: absolute;
     float: right;
     left: 100px;
     top: 0px;
-    /* margin-right: 2px; */
   }
   nav ul li {
     padding: 2px;
@@ -184,13 +182,10 @@ footer {
   }
 }
 @media screen and (max-width: 350px) {
-  body {
-    font-size: 9px;
+  footer {
+    font-size: 11px;
   }
   nav ul li {
     padding: 1px;
   }
-  /* #sign-in {
-    width: 40px;
-  } */
 }
