--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
   background-color: #f2f2f2;
   line-height: 40px;
   font-size: 16px;
-  position: absolute;
+  position: fixed;
   bottom: 5px;
   color: rgb(95, 99, 104);
   padding-bottom: 20px;
@@ -180,7 +180,7 @@ footer {
     font-size: 12px;
   }
   #footer-nav a {
-    padding: 6px;
+    padding: 4px;
     font-size: 10px;
   }
   #search-input {
