--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ ul {
   display: flex;
 }
 nav ul li {
-  display: inline-block;
   padding: 6px;
   font-size: 16px;
   vertical-align: middle;
@@ -24,7 +23,6 @@ nav ul li:hover {
 .header-right {
   float: right;
   top: 0px;
-  /* margin-right: 25px; */
 }
 #icon {
   vertical-align: middle;
@@ -115,12 +113,11 @@ p a {
 footer {
   width: 100%;
   height: 100px;
-  /* padding-left: 5px; */
   background-color: #f2f2f2;
   line-height: 40px;
   font-size: 16px;
   position: fixed;
-  bottom: 5px;
+  bottom: 0;
   color: rgb(95, 99, 104);
   padding-bottom: 20px;
 }
@@ -129,7 +126,6 @@ footer {
 }
 .footer-right {
   float: right;
-  /* margin-right: 25px; */
 }
 #footer-nav {
   border-top: 1px solid #e4e4e4;
@@ -164,10 +160,7 @@ footer {
   body {
     font-size: 11px;
   }
-  /* .header-left {
-    position: absolute;
-    left: 0px;
-  } */
+
   .header-right {
     position: absolute;
     float: right;
@@ -183,6 +176,7 @@ footer {
     padding: 4px;
     font-size: 10px;
   }
+
   #search-input {
     width: 300px;
   }
